add: 프로필 사진 삭제 API 추가
